...
class MyApp extends StatelessWidget {
  MyApp(GetIt serviceLocator) {
    // TODO(Sayeed): Not very happy with this. Is there a better way to set the global serviceLocator.
    di.serviceLocator = serviceLocator;
  }

  static const keyProductListTab = 'ProductListTab';
  static const keyCartTab = 'CartTab';

  // This widget is the root of your application.
  @override
  Widget build(BuildContext context) {
    return MaterialApp(
      theme: ThemeData(
...
